--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 ]
 license = { text = "MIT" }
 dependencies = [
-    "aiohttp",
+    "httpx",
     "aiofiles",
     "colorama"
 ]
@@ -36,7 +36,6 @@ source = "https://github.com/notanerd314/gdapi"
 tracker = "https://github.com/notanerd314/gdapi/issues"
 
 [project.scripts]
-gd = "cli:main"
 requires-python = ">=3.7,<4.0"
 
 [tool.setuptools]
