--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ license = { text = "MIT" }
 dependencies = [
     "httpx",
     "aiofiles",
-    "colorama".
+    "colorama",
     "dateutil"
 ]
 readme = "README.md"
