Added gamesave parsing to Client (local)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ authors = [
 license = { text = "MIT" }
 dependencies = [
     "httpx",
-    "aiofiles"
+    "aiofiles",
+    "lxml"
 ]
 readme = "README.md"
 classifiers = [
